@@ -1,3 +1,7 @@
+2001-10-29  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* GormClassManager.m: Tidy action namnes in browser etc.
+
 2001-10-28  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
 
 	* Palettes/2Controls/main.m ([ControlsPalette -finishInstantiate]): 
